<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="100dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="360dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/voltage_label"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/voltageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/state_label"
            android:textColor="@color/textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:gravity="right"
                android:text="@string/phase1_label"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

            <RadioGroup
                android:id="@+id/phase1RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/phase1OpenButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/holo_green_light"
                    android:clickable="false"
                    android:text="@string/openState_label"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/phase1ClosedButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/holo_red_dark"
                    android:clickable="false"
                    android:text="@string/closedState_label"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/phase1TransitionTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:gravity="right"
                android:text="@string/phase2_label"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

            <RadioGroup
                android:id="@+id/phase2RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/phase2OpenButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/holo_green_light"
                    android:clickable="false"
                    android:text="@string/openState_label"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/phase2ClosedButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/holo_red_dark"
                    android:clickable="false"
                    android:text="@string/closedState_label"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/phase2TransitionTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:gravity="right"
                android:text="@string/phase3_label"
                android:textColor="@color/textColorPrimary"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

            <RadioGroup
                android:id="@+id/phase3RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/phase3OpenButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/holo_green_light"
                    android:clickable="false"
                    android:text="@string/openState_label"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/phase3ClosedButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@android:color/holo_red_dark"
                    android:clickable="false"
                    android:text="@string/closedState_label"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/phase3TransitionTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/openButton"
                style="@android:style/Widget.Button"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/open_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/closeButton"
                style="@android:style/Widget.Button"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/close_label"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right" />

                <TextView
                    android:id="@+id/tvBloqueo"
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|center_horizontal"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="30sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <Switch
                android:id="@+id/switchLocalRemoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:splitTrack="false"
                android:text="Remoto / Local"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textOff="R"
                android:textOn="L" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/tvLocalRemoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPaquetes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="% Paquetes"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRSSI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="RSSI"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSenal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Señal"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>